Fix News topic Attachments dropdown overflow

--- a/imports/ui_3/stylesheets/customize.less
+++ b/imports/ui_3/stylesheets/customize.less
@@ -205,6 +205,9 @@
     max-height: 150px;
 }
 
+.feed-element {
+    overflow: visible !important;                          // overriding the template, so attachments dropdown can extend out of the box
+}
 // Dividing the comments from each other
 .social-comment {
     margin-top: 0px;
